Parte1/y.output
   0  $accept : programa $end

   1  $$1 :

   2  programa : $$1 lista_declaracoes lista_funcoes

   3  lista_declaracoes : declaracao lista_declaracoes
   4                    |

   5  $$2 :

   6  declaracao : tipo $$2 TArray lista_ident ';'
   7             | declarador_struct

   8  $$3 :

   9  $$4 :

  10  $$5 :

  11  declarador_struct : STRUCT IDENT $$3 '{' $$4 lista_campos '}' ';' $$5

  12  lista_campos : lista_campos campoStruct
  13               | campoStruct

  14  $$6 :

  15  campoStruct : tipo $$6 TArray lista_ident ';'

  16  tipo : INT
  17       | DOUBLE
  18       | BOOL
  19       | STRING
  20       | IDENT

  21  tipo_funct : tipo
  22             | VOID

  23  TArray : '[' NUM ']' TArray
  24         |

  25  lista_ident : lista_ident ',' identificador
  26              | identificador

  27  identificador : IDENT

  28  lista_funcoes : lista_funcoes funcao
  29                |

  30  $$7 :

  31  $$8 :

  32  $$9 :

  33  $$10 :

  34  $$11 :

  35  funcao : FUNCT tipo_funct $$7 IDENT $$8 '(' $$9 lista_parametros ')' $$10 lista_declaracoes_funct bloco $$11

  36  lista_declaracoes_funct : declaracao_funct lista_declaracoes_funct
  37                          |

  38  $$12 :

  39  declaracao_funct : tipo $$12 TArray lista_ident ';'

  40  lista_parametros : lista_parametros ',' parametro
  41                   | parametro

  42  $$13 :

  43  parametro : tipo $$13 identificador
  44            |

  45  bloco : '{' listacmd '}'

  46  listacmd : listacmd cmd
  47           |

  48  cmd : exp ';'
  49      | IF '(' exp ')' cmd

  50  exp : exp '+' exp
  51      | exp '>' exp
  52      | exp AND exp
  53      | NUM
  54      | LITERAL
  55      | TRUE
  56      | FALSE
  57      | '(' exp ')'
  58      | IDENT
  59      | exp '=' exp
  60      | exp '[' exp ']'
  61      | exp '.' exp

  62  $$14 :

  63  exp : exp '(' $$14 lista_exp ')'

  64  lista_exp : lista_exp ',' exp
  65            | exp
  66            |

state 0
	$accept : . programa $end  (0)
	$$1 : .  (1)

	.  reduce 1

	programa  goto 1
	$$1  goto 2


state 1
	$accept : programa . $end  (0)

	$end  accept


state 2
	programa : $$1 . lista_declaracoes lista_funcoes  (2)
	lista_declaracoes : .  (4)

	IDENT  shift 3
	INT  shift 4
	DOUBLE  shift 5
	BOOL  shift 6
	STRING  shift 7
	STRUCT  shift 8
	$end  reduce 4
	FUNCT  reduce 4

	tipo  goto 9
	lista_declaracoes  goto 10
	declaracao  goto 11
	declarador_struct  goto 12


state 3
	tipo : IDENT .  (20)

	.  reduce 20


state 4
	tipo : INT .  (16)

	.  reduce 16


state 5
	tipo : DOUBLE .  (17)

	.  reduce 17


state 6
	tipo : BOOL .  (18)

	.  reduce 18


state 7
	tipo : STRING .  (19)

	.  reduce 19


state 8
	declarador_struct : STRUCT . IDENT $$3 '{' $$4 lista_campos '}' ';' $$5  (11)

	IDENT  shift 13
	.  error


state 9
	declaracao : tipo . $$2 TArray lista_ident ';'  (6)
	$$2 : .  (5)

	.  reduce 5

	$$2  goto 14


state 10
	programa : $$1 lista_declaracoes . lista_funcoes  (2)
	lista_funcoes : .  (29)

	.  reduce 29

	lista_funcoes  goto 15


state 11
	lista_declaracoes : declaracao . lista_declaracoes  (3)
	lista_declaracoes : .  (4)

	IDENT  shift 3
	INT  shift 4
	DOUBLE  shift 5
	BOOL  shift 6
	STRING  shift 7
	STRUCT  shift 8
	$end  reduce 4
	FUNCT  reduce 4

	tipo  goto 9
	lista_declaracoes  goto 16
	declaracao  goto 11
	declarador_struct  goto 12


state 12
	declaracao : declarador_struct .  (7)

	.  reduce 7


state 13
	declarador_struct : STRUCT IDENT . $$3 '{' $$4 lista_campos '}' ';' $$5  (11)
	$$3 : .  (8)

	.  reduce 8

	$$3  goto 17


state 14
	declaracao : tipo $$2 . TArray lista_ident ';'  (6)
	TArray : .  (24)

	'['  shift 18
	IDENT  reduce 24

	TArray  goto 19


state 15
	programa : $$1 lista_declaracoes lista_funcoes .  (2)
	lista_funcoes : lista_funcoes . funcao  (28)

	FUNCT  shift 20
	$end  reduce 2

	funcao  goto 21


state 16
	lista_declaracoes : declaracao lista_declaracoes .  (3)

	.  reduce 3


state 17
	declarador_struct : STRUCT IDENT $$3 . '{' $$4 lista_campos '}' ';' $$5  (11)

	'{'  shift 22
	.  error


state 18
	TArray : '[' . NUM ']' TArray  (23)

	NUM  shift 23
	.  error


state 19
	declaracao : tipo $$2 TArray . lista_ident ';'  (6)

	IDENT  shift 24
	.  error

	lista_ident  goto 25
	identificador  goto 26


state 20
	funcao : FUNCT . tipo_funct $$7 IDENT $$8 '(' $$9 lista_parametros ')' $$10 lista_declaracoes_funct bloco $$11  (35)

	IDENT  shift 3
	INT  shift 4
	DOUBLE  shift 5
	BOOL  shift 6
	VOID  shift 27
	STRING  shift 7
	.  error

	tipo  goto 28
	tipo_funct  goto 29


state 21
	lista_funcoes : lista_funcoes funcao .  (28)

	.  reduce 28


state 22
	declarador_struct : STRUCT IDENT $$3 '{' . $$4 lista_campos '}' ';' $$5  (11)
	$$4 : .  (9)

	.  reduce 9

	$$4  goto 30


state 23
	TArray : '[' NUM . ']' TArray  (23)

	']'  shift 31
	.  error


state 24
	identificador : IDENT .  (27)

	.  reduce 27


state 25
	declaracao : tipo $$2 TArray lista_ident . ';'  (6)
	lista_ident : lista_ident . ',' identificador  (25)

	','  shift 32
	';'  shift 33
	.  error


state 26
	lista_ident : identificador .  (26)

	.  reduce 26


state 27
	tipo_funct : VOID .  (22)

	.  reduce 22


state 28
	tipo_funct : tipo .  (21)

	.  reduce 21


state 29
	funcao : FUNCT tipo_funct . $$7 IDENT $$8 '(' $$9 lista_parametros ')' $$10 lista_declaracoes_funct bloco $$11  (35)
	$$7 : .  (30)

	.  reduce 30

	$$7  goto 34


state 30
	declarador_struct : STRUCT IDENT $$3 '{' $$4 . lista_campos '}' ';' $$5  (11)

	IDENT  shift 3
	INT  shift 4
	DOUBLE  shift 5
	BOOL  shift 6
	STRING  shift 7
	.  error

	tipo  goto 35
	lista_campos  goto 36
	campoStruct  goto 37


state 31
	TArray : '[' NUM ']' . TArray  (23)
	TArray : .  (24)

	'['  shift 18
	IDENT  reduce 24

	TArray  goto 38


state 32
	lista_ident : lista_ident ',' . identificador  (25)

	IDENT  shift 24
	.  error

	identificador  goto 39


state 33
	declaracao : tipo $$2 TArray lista_ident ';' .  (6)

	.  reduce 6


state 34
	funcao : FUNCT tipo_funct $$7 . IDENT $$8 '(' $$9 lista_parametros ')' $$10 lista_declaracoes_funct bloco $$11  (35)

	IDENT  shift 40
	.  error


state 35
	campoStruct : tipo . $$6 TArray lista_ident ';'  (15)
	$$6 : .  (14)

	.  reduce 14

	$$6  goto 41


state 36
	declarador_struct : STRUCT IDENT $$3 '{' $$4 lista_campos . '}' ';' $$5  (11)
	lista_campos : lista_campos . campoStruct  (12)

	IDENT  shift 3
	INT  shift 4
	DOUBLE  shift 5
	BOOL  shift 6
	STRING  shift 7
	'}'  shift 42
	.  error

	tipo  goto 35
	campoStruct  goto 43


state 37
	lista_campos : campoStruct .  (13)

	.  reduce 13


state 38
	TArray : '[' NUM ']' TArray .  (23)

	.  reduce 23


state 39
	lista_ident : lista_ident ',' identificador .  (25)

	.  reduce 25


state 40
	funcao : FUNCT tipo_funct $$7 IDENT . $$8 '(' $$9 lista_parametros ')' $$10 lista_declaracoes_funct bloco $$11  (35)
	$$8 : .  (31)

	.  reduce 31

	$$8  goto 44


state 41
	campoStruct : tipo $$6 . TArray lista_ident ';'  (15)
	TArray : .  (24)

	'['  shift 18
	IDENT  reduce 24

	TArray  goto 45


state 42
	declarador_struct : STRUCT IDENT $$3 '{' $$4 lista_campos '}' . ';' $$5  (11)

	';'  shift 46
	.  error


state 43
	lista_campos : lista_campos campoStruct .  (12)

	.  reduce 12


state 44
	funcao : FUNCT tipo_funct $$7 IDENT $$8 . '(' $$9 lista_parametros ')' $$10 lista_declaracoes_funct bloco $$11  (35)

	'('  shift 47
	.  error


state 45
	campoStruct : tipo $$6 TArray . lista_ident ';'  (15)

	IDENT  shift 24
	.  error

	lista_ident  goto 48
	identificador  goto 26


state 46
	declarador_struct : STRUCT IDENT $$3 '{' $$4 lista_campos '}' ';' . $$5  (11)
	$$5 : .  (10)

	.  reduce 10

	$$5  goto 49


state 47
	funcao : FUNCT tipo_funct $$7 IDENT $$8 '(' . $$9 lista_parametros ')' $$10 lista_declaracoes_funct bloco $$11  (35)
	$$9 : .  (32)

	.  reduce 32

	$$9  goto 50


state 48
	campoStruct : tipo $$6 TArray lista_ident . ';'  (15)
	lista_ident : lista_ident . ',' identificador  (25)

	','  shift 32
	';'  shift 51
	.  error


state 49
	declarador_struct : STRUCT IDENT $$3 '{' $$4 lista_campos '}' ';' $$5 .  (11)

	.  reduce 11


state 50
	funcao : FUNCT tipo_funct $$7 IDENT $$8 '(' $$9 . lista_parametros ')' $$10 lista_declaracoes_funct bloco $$11  (35)
	parametro : .  (44)

	IDENT  shift 3
	INT  shift 4
	DOUBLE  shift 5
	BOOL  shift 6
	STRING  shift 7
	','  reduce 44
	')'  reduce 44

	tipo  goto 52
	lista_parametros  goto 53
	parametro  goto 54


state 51
	campoStruct : tipo $$6 TArray lista_ident ';' .  (15)

	.  reduce 15


state 52
	parametro : tipo . $$13 identificador  (43)
	$$13 : .  (42)

	.  reduce 42

	$$13  goto 55


state 53
	funcao : FUNCT tipo_funct $$7 IDENT $$8 '(' $$9 lista_parametros . ')' $$10 lista_declaracoes_funct bloco $$11  (35)
	lista_parametros : lista_parametros . ',' parametro  (40)

	','  shift 56
	')'  shift 57
	.  error


state 54
	lista_parametros : parametro .  (41)

	.  reduce 41


state 55
	parametro : tipo $$13 . identificador  (43)

	IDENT  shift 24
	.  error

	identificador  goto 58


state 56
	lista_parametros : lista_parametros ',' . parametro  (40)
	parametro : .  (44)

	IDENT  shift 3
	INT  shift 4
	DOUBLE  shift 5
	BOOL  shift 6
	STRING  shift 7
	','  reduce 44
	')'  reduce 44

	tipo  goto 52
	parametro  goto 59


state 57
	funcao : FUNCT tipo_funct $$7 IDENT $$8 '(' $$9 lista_parametros ')' . $$10 lista_declaracoes_funct bloco $$11  (35)
	$$10 : .  (33)

	.  reduce 33

	$$10  goto 60


state 58
	parametro : tipo $$13 identificador .  (43)

	.  reduce 43


state 59
	lista_parametros : lista_parametros ',' parametro .  (40)

	.  reduce 40


state 60
	funcao : FUNCT tipo_funct $$7 IDENT $$8 '(' $$9 lista_parametros ')' $$10 . lista_declaracoes_funct bloco $$11  (35)
	lista_declaracoes_funct : .  (37)

	IDENT  shift 3
	INT  shift 4
	DOUBLE  shift 5
	BOOL  shift 6
	STRING  shift 7
	'{'  reduce 37

	tipo  goto 61
	lista_declaracoes_funct  goto 62
	declaracao_funct  goto 63


state 61
	declaracao_funct : tipo . $$12 TArray lista_ident ';'  (39)
	$$12 : .  (38)

	.  reduce 38

	$$12  goto 64


state 62
	funcao : FUNCT tipo_funct $$7 IDENT $$8 '(' $$9 lista_parametros ')' $$10 lista_declaracoes_funct . bloco $$11  (35)

	'{'  shift 65
	.  error

	bloco  goto 66


state 63
	lista_declaracoes_funct : declaracao_funct . lista_declaracoes_funct  (36)
	lista_declaracoes_funct : .  (37)

	IDENT  shift 3
	INT  shift 4
	DOUBLE  shift 5
	BOOL  shift 6
	STRING  shift 7
	'{'  reduce 37

	tipo  goto 61
	lista_declaracoes_funct  goto 67
	declaracao_funct  goto 63


state 64
	declaracao_funct : tipo $$12 . TArray lista_ident ';'  (39)
	TArray : .  (24)

	'['  shift 18
	IDENT  reduce 24

	TArray  goto 68


state 65
	bloco : '{' . listacmd '}'  (45)
	listacmd : .  (47)

	.  reduce 47

	listacmd  goto 69


state 66
	funcao : FUNCT tipo_funct $$7 IDENT $$8 '(' $$9 lista_parametros ')' $$10 lista_declaracoes_funct bloco . $$11  (35)
	$$11 : .  (34)

	.  reduce 34

	$$11  goto 70


state 67
	lista_declaracoes_funct : declaracao_funct lista_declaracoes_funct .  (36)

	.  reduce 36


state 68
	declaracao_funct : tipo $$12 TArray . lista_ident ';'  (39)

	IDENT  shift 24
	.  error

	lista_ident  goto 71
	identificador  goto 26


state 69
	bloco : '{' listacmd . '}'  (45)
	listacmd : listacmd . cmd  (46)

	IDENT  shift 72
	NUM  shift 73
	LITERAL  shift 74
	IF  shift 75
	TRUE  shift 76
	FALSE  shift 77
	'('  shift 78
	'}'  shift 79
	.  error

	exp  goto 80
	cmd  goto 81


state 70
	funcao : FUNCT tipo_funct $$7 IDENT $$8 '(' $$9 lista_parametros ')' $$10 lista_declaracoes_funct bloco $$11 .  (35)

	.  reduce 35


state 71
	lista_ident : lista_ident . ',' identificador  (25)
	declaracao_funct : tipo $$12 TArray lista_ident . ';'  (39)

	','  shift 32
	';'  shift 82
	.  error


state 72
	exp : IDENT .  (58)

	.  reduce 58


state 73
	exp : NUM .  (53)

	.  reduce 53


state 74
	exp : LITERAL .  (54)

	.  reduce 54


state 75
	cmd : IF . '(' exp ')' cmd  (49)

	'('  shift 83
	.  error


state 76
	exp : TRUE .  (55)

	.  reduce 55


state 77
	exp : FALSE .  (56)

	.  reduce 56


state 78
	exp : '(' . exp ')'  (57)

	IDENT  shift 72
	NUM  shift 73
	LITERAL  shift 74
	TRUE  shift 76
	FALSE  shift 77
	'('  shift 78
	.  error

	exp  goto 84


state 79
	bloco : '{' listacmd '}' .  (45)

	.  reduce 45


state 80
	cmd : exp . ';'  (48)
	exp : exp . '+' exp  (50)
	exp : exp . '>' exp  (51)
	exp : exp . AND exp  (52)
	exp : exp . '=' exp  (59)
	exp : exp . '[' exp ']'  (60)
	exp : exp . '.' exp  (61)
	exp : exp . '(' $$14 lista_exp ')'  (63)

	AND  shift 85
	'='  shift 86
	'>'  shift 87
	'+'  shift 88
	'['  shift 89
	'('  shift 90
	'.'  shift 91
	';'  shift 92
	.  error


state 81
	listacmd : listacmd cmd .  (46)

	.  reduce 46


state 82
	declaracao_funct : tipo $$12 TArray lista_ident ';' .  (39)

	.  reduce 39


state 83
	cmd : IF '(' . exp ')' cmd  (49)

	IDENT  shift 72
	NUM  shift 73
	LITERAL  shift 74
	TRUE  shift 76
	FALSE  shift 77
	'('  shift 78
	.  error

	exp  goto 93


state 84
	exp : exp . '+' exp  (50)
	exp : exp . '>' exp  (51)
	exp : exp . AND exp  (52)
	exp : '(' exp . ')'  (57)
	exp : exp . '=' exp  (59)
	exp : exp . '[' exp ']'  (60)
	exp : exp . '.' exp  (61)
	exp : exp . '(' $$14 lista_exp ')'  (63)

	AND  shift 85
	'='  shift 86
	'>'  shift 87
	'+'  shift 88
	'['  shift 89
	'('  shift 90
	'.'  shift 91
	')'  shift 94
	.  error


state 85
	exp : exp AND . exp  (52)

	IDENT  shift 72
	NUM  shift 73
	LITERAL  shift 74
	TRUE  shift 76
	FALSE  shift 77
	'('  shift 78
	.  error

	exp  goto 95


state 86
	exp : exp '=' . exp  (59)

	IDENT  shift 72
	NUM  shift 73
	LITERAL  shift 74
	TRUE  shift 76
	FALSE  shift 77
	'('  shift 78
	.  error

	exp  goto 96


state 87
	exp : exp '>' . exp  (51)

	IDENT  shift 72
	NUM  shift 73
	LITERAL  shift 74
	TRUE  shift 76
	FALSE  shift 77
	'('  shift 78
	.  error

	exp  goto 97


state 88
	exp : exp '+' . exp  (50)

	IDENT  shift 72
	NUM  shift 73
	LITERAL  shift 74
	TRUE  shift 76
	FALSE  shift 77
	'('  shift 78
	.  error

	exp  goto 98


state 89
	exp : exp '[' . exp ']'  (60)

	IDENT  shift 72
	NUM  shift 73
	LITERAL  shift 74
	TRUE  shift 76
	FALSE  shift 77
	'('  shift 78
	.  error

	exp  goto 99


state 90
	exp : exp '(' . $$14 lista_exp ')'  (63)
	$$14 : .  (62)

	.  reduce 62

	$$14  goto 100


state 91
	exp : exp '.' . exp  (61)

	IDENT  shift 72
	NUM  shift 73
	LITERAL  shift 74
	TRUE  shift 76
	FALSE  shift 77
	'('  shift 78
	.  error

	exp  goto 101


state 92
	cmd : exp ';' .  (48)

	.  reduce 48


state 93
	cmd : IF '(' exp . ')' cmd  (49)
	exp : exp . '+' exp  (50)
	exp : exp . '>' exp  (51)
	exp : exp . AND exp  (52)
	exp : exp . '=' exp  (59)
	exp : exp . '[' exp ']'  (60)
	exp : exp . '.' exp  (61)
	exp : exp . '(' $$14 lista_exp ')'  (63)

	AND  shift 85
	'='  shift 86
	'>'  shift 87
	'+'  shift 88
	'['  shift 89
	'('  shift 90
	'.'  shift 91
	')'  shift 102
	.  error


state 94
	exp : '(' exp ')' .  (57)

	.  reduce 57


state 95
	exp : exp . '+' exp  (50)
	exp : exp . '>' exp  (51)
	exp : exp . AND exp  (52)
	exp : exp AND exp .  (52)
	exp : exp . '=' exp  (59)
	exp : exp . '[' exp ']'  (60)
	exp : exp . '.' exp  (61)
	exp : exp . '(' $$14 lista_exp ')'  (63)

	'['  shift 89
	'('  shift 90
	'.'  shift 91
	AND  reduce 52
	'='  reduce 52
	'>'  reduce 52
	','  reduce 52
	'+'  reduce 52
	';'  reduce 52
	']'  reduce 52
	')'  reduce 52

